--- a/static/assets/css/sprites-style.css
+++ b/static/assets/css/sprites-style.css
@@ -430,22 +430,24 @@
   display: block;
 }
 
-.sprite5-413271 {
-  background-image: url(/static/assets/images/submit_orange.png);
+.sprite5.sprite5-413271 {
+  background-image: url(../sprites/spritesheet5.png);
+  background-repeat: no-repeat;
   display: block;
-  background-size: 103% 134%;
 }
 
-.sprite5-413272 {
-  background-image: url(/static/assets/images/submit_red.png);
+.sprite5.sprite5-413272 {
+  background-image: url(../sprites/spritesheet5.png);
+  background-repeat: no-repeat;
   display: block;
-  background-size: 103% 134%;
+  background-position: -4px -531px;
 }
 
-.sprite5-413273 {
-  background-image: url(/static/assets/images/submit_blue.png);
+.sprite5.sprite5-413273 {
+  background-image: url(../sprites/spritesheet5.png);
+  background-repeat: no-repeat;
   display: block;
-  background-size: 103% 134%;
+  background-position: -4px -606px;
 }
 
 .sprite-select {
