--- a/static/assets/css/mb-sprites-style.css
+++ b/static/assets/css/mb-sprites-style.css
@@ -219,6 +219,14 @@
   display: block;
 }
 
+.sprite3.sprite3-413419 {
+  background-position: -654px -1459px;
+}
+
+.sprite3.sprite3-413420 {
+  background-position: -654px -1564px;
+}
+
 .sprite-logo {
   width: 206px;
   height: 66px;
