--- a/static/assets/css/sprites-style.css
+++ b/static/assets/css/sprites-style.css
@@ -204,6 +204,10 @@
   display: block;
 }
 
+.sprite3.sprite3-414064 {
+  background-position: -746px -714px;
+}
+
 .sprite-pkg3-img {
   width: 107px;
   height: 198px;
