--- a/static/assets/css/sprites-style.css
+++ b/static/assets/css/sprites-style.css
@@ -205,7 +205,8 @@
 }
 
 .sprite3.sprite3-414064 {
-  background-position: -746px -714px;
+  background-position: -746px -260px;
+  height: 220px;
 }
 
 .sprite-pkg3-img {
