--- a/static/assets/css/mb-sprites-style.css
+++ b/static/assets/css/mb-sprites-style.css
@@ -219,6 +219,11 @@
   display: block;
 }
 
+.sprite3.sprite3-414126 {
+  background-position: -4px -1510px;
+  height: 216px;
+}
+
 .sprite3.sprite3-413419 {
   background-position: -654px -1457px;
 }
