--- a/static/assets/css/promo/desktop/index.css
+++ b/static/assets/css/promo/desktop/index.css
@@ -1095,6 +1095,21 @@ ul.s4-list2 li:nth-child(3) {
   height: 685px;
 }
 
+.section7.section7-414448 {
+  background: url("../../../../promo/desktop/images/section7_v1.jpg") center top
+    no-repeat;
+}
+
+.section7.section7-414449 {
+  background: url("../../../../promo/desktop/images/section7_v2.jpg") center top
+    no-repeat;
+}
+
+.section7.section7-414450 {
+  background: url("../../../../promo/desktop/images/section7_v3.jpg") center top
+    no-repeat;
+}
+
 .s7logo {
   margin-left: 106px;
   margin-top: 20px;
