--- a/static/assets/css/promo/mobile/index.css
+++ b/static/assets/css/promo/mobile/index.css
@@ -218,6 +218,16 @@ start section2
   padding: 5px 0 0;
 }
 
+.s2-txt4-T {
+  font-weight: 500;
+  font-size: 33px;
+  line-height: 33px;
+  text-align: center;
+  color: #395761;
+  margin: 1px 0 0 0;
+  padding: 0 0 0 0;
+}
+
 ul.s2-list {
   margin: 30px 0 0 10px;
   padding: 0;
@@ -343,14 +353,15 @@ ul.s3-list li b {
   margin: 20px auto 0 auto;
 }
 .wrapper-411716 .strip-txt {
-  font-size:28px;
+  font-size: 28px;
   line-height: 33px;
   text-align: center;
   color: #fff;
   margin: 0 0 0 0;
   padding: 14px 0 0 0;
 }
-.wrapper-411716 .strip-txt span, .wrapper-411716 .strip-txt b {
+.wrapper-411716 .strip-txt span,
+.wrapper-411716 .strip-txt b {
   font-weight: 700;
   font-size: 31px;
   line-height: 36px;
@@ -614,9 +625,9 @@ start section5
 
 #section-five {
   height: auto;
-  position:relative;
-  padding:0 0 0 0;
-  }
+  position: relative;
+  padding: 0 0 0 0;
+}
 .s5-txt1 {
   font-size: 30px;
   line-height: 40px;
@@ -625,35 +636,41 @@ start section5
   margin: 0 auto;
   padding: 20px 20px 0 20px;
 }
-.magazine{
-  display:block;
-  margin:30px auto 0 auto;}
-.s5-box{
-  width:622px;
-  display:block;
-  margin:30px auto 0 auto;
-  border:1px dotted #f1f1f1;
-  border-radius:10px;
-  padding:0 0 20px 0;}
-.s5-box-hd{
-  height:86px;
-  background:#f7f7f7;
+.magazine {
+  display: block;
+  margin: 30px auto 0 auto;
+}
+.s5-box {
+  width: 622px;
+  display: block;
+  margin: 30px auto 0 auto;
+  border: 1px dotted #f1f1f1;
+  border-radius: 10px;
+  padding: 0 0 20px 0;
+}
+.s5-box-hd {
+  height: 86px;
+  background: #f7f7f7;
   border-top-right-radius: 5px;
-  border-top-left-radius: 5px;} 
-.ng{
-  display:block;
-  margin:0 auto 0 auto;
-  padding:16px 0 0 0;}
-.s5-box-txt{
-  font-size:30px;
-  line-height:40px;
-  text-align:center;
-  color:#2d2d2d;
-  margin:0 auto;
-  padding:20px 0 0 0;}
+  border-top-left-radius: 5px;
+}
+.ng {
+  display: block;
+  margin: 0 auto 0 auto;
+  padding: 16px 0 0 0;
+}
+.s5-box-txt {
+  font-size: 30px;
+  line-height: 40px;
+  text-align: center;
+  color: #2d2d2d;
+  margin: 0 auto;
+  padding: 20px 0 0 0;
+}
 
 .wrapper-411723 .strip {
-  background: url(../../../../assets/images/promoMobileV3/strip-bg.jpg) center top no-repeat;
+  background: url(../../../../assets/images/promoMobileV3/strip-bg.jpg) center
+    top no-repeat;
   height: 125px;
   display: block;
   margin: 20px auto 0 auto;
@@ -661,9 +678,9 @@ start section5
 
 #section-five.wrapper-411723 {
   height: auto;
-  position:relative;
-  padding:0 0 0 0;
-  }
+  position: relative;
+  padding: 0 0 0 0;
+}
 .wrapper-411723 .s5-txt1 {
   font-size: 30px;
   line-height: 40px;
@@ -672,31 +689,37 @@ start section5
   margin: 0 auto;
   padding: 20px 20px 0 20px;
 }
-.wrapper-411723 .magazine{
-  display:block;
-  margin:30px auto 0 auto;}
-.wrapper-411723 .s5-box{
-  background:url(../../../../assets/images/promoMobileV3/mag-box.png) center top no-repeat;
-  width:623px;
-  height:304px;
-  display:block;
-  margin:30px auto 0 auto;
-  padding:0 0 0 0;}
-  
-.wrapper-411723 .ng{
-  display:block;
-  margin:0 auto 0 auto;
-  padding:22px 0 0 0;}
-.wrapper-411723 .s5-box-txt{
-  font-size:30px;
-  line-height:40px;
-  text-align:center;
-  color:#2d2d2d;
-  margin:0 auto;
-  padding:20px 0 0 0;}
-.wrapper-411723 .mag1{
-  margin:-65px auto 40px auto;
-  display:block;}
+.wrapper-411723 .magazine {
+  display: block;
+  margin: 30px auto 0 auto;
+}
+.wrapper-411723 .s5-box {
+  background: url(../../../../assets/images/promoMobileV3/mag-box.png) center
+    top no-repeat;
+  width: 623px;
+  height: 304px;
+  display: block;
+  margin: 30px auto 0 auto;
+  padding: 0 0 0 0;
+}
+
+.wrapper-411723 .ng {
+  display: block;
+  margin: 0 auto 0 auto;
+  padding: 22px 0 0 0;
+}
+.wrapper-411723 .s5-box-txt {
+  font-size: 30px;
+  line-height: 40px;
+  text-align: center;
+  color: #2d2d2d;
+  margin: 0 auto;
+  padding: 20px 0 0 0;
+}
+.wrapper-411723 .mag1 {
+  margin: -65px auto 40px auto;
+  display: block;
+}
 
 .wrapper-411723 .s5-box-hd {
   background: none;
