--- a/static/assets/css/promo/desktop/checkout.css
+++ b/static/assets/css/promo/desktop/checkout.css
@@ -496,6 +496,10 @@ ul.smrylist li:nth-child(8) {
   text-align: center;
 }
 
+.card-image {
+  width: 60px;
+}
+
 .sameas {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
