Implement split tests 314104 and 316344

--- a/static/assets/css/mb-sprites-style.css
+++ b/static/assets/css/mb-sprites-style.css
@@ -232,6 +232,18 @@
   background-position: -654px -1560px;
 }
 
+.sprite3.sprite-416545 {
+  background-position: -654px -1217px;
+}
+
+.sprite3.sprite-416546 {
+  background-position: -654px -1792px;
+}
+
+.sprite3.sprite-416547 {
+  background-position: -654px -1668px;
+}
+
 .sprite3.sprite3-false {
   background-position: -654px -1560px !important;
 }
