--- a/static/assets/css/sprites-style.css
+++ b/static/assets/css/sprites-style.css
@@ -439,7 +439,7 @@
   background-image: url(../sprites/spritesheet5.png) !important;
   background-repeat: no-repeat;
   display: block;
-  background-position: -4px -606px;
+  background-position: -4px -606px !important;
 }
 
 .sprite-select {
@@ -533,7 +533,7 @@
   background-position: -4px -765px;
 }
 
-.sprite-t-box {
+.sprite-t-box {x
   width: 506px;
   height: 532px;
   background-position: -295px -458px;
