--- a/static/assets/css/sprites-style.css
+++ b/static/assets/css/sprites-style.css
@@ -533,7 +533,7 @@
   background-position: -4px -765px;
 }
 
-.sprite-t-box {x
+.sprite-t-box {
   width: 506px;
   height: 532px;
   background-position: -295px -458px;
