wire desktop test 316439

--- a/static/assets/css/sprites-style.css
+++ b/static/assets/css/sprites-style.css
@@ -251,10 +251,16 @@
   background-position: -746px -175px;
 }
 
-.sprite-s1seal {
+.sprite-s1seal-416690 {
   width: 205px;
   height: 72px;
   background-position: -1040px -175px;
+}
+
+.sprite-s1seal-416691 {
+  width: 205px;
+  height: 72px;
+  background-position: -1042px -489px;
 }
 
 .sprite-s2bottle {
