--- a/static/assets/css/sprites-style.css
+++ b/static/assets/css/sprites-style.css
@@ -251,6 +251,12 @@
   background-position: -746px -175px;
 }
 
+.sprite-s1seal {
+  width: 205px;
+  height: 72px;
+  background-position: -1040px -175px;
+}
+
 .sprite-s1seal-416690 {
   width: 205px;
   height: 72px;
