wire abtasty api calls

--- a/static/assets/css/sprites-style.css
+++ b/static/assets/css/sprites-style.css
@@ -257,13 +257,15 @@
   background-position: -1040px -175px;
 }
 
-.sprite-s1seal-416690 {
+.sprite-s1seal-416690,
+.sprite-s1seal-418315 {
   width: 205px;
   height: 72px;
   background-position: -1040px -175px;
 }
 
-.sprite-s1seal-416691 {
+.sprite-s1seal-416691,
+.sprite-s1seal-418316 {
   width: 205px;
   height: 72px;
   background-position: -1042px -489px;
