wire ui mobile 317679

--- a/static/assets/css/mb-sprites-style.css
+++ b/static/assets/css/mb-sprites-style.css
@@ -461,7 +461,8 @@
   display: inline-block;
 }
 
-.sprite-s7-logo-416840 {
+.sprite-s7-logo-416840,
+.sprite-s1-logo-418317 {
   width: 442px;
   height: 79px;
   background-position: -932px -950px;
@@ -469,7 +470,8 @@
   display: inline-block;
 }
 
-.sprite-s7-logo-416841 {
+.sprite-s7-logo-416841,
+.sprite-s1-logo-418318 {
   width: 442px;
   height: 79px;
   background-position: -1184px -1549px;
