wires ui for 317677

--- a/static/assets/css/mb-sprites-style.css
+++ b/static/assets/css/mb-sprites-style.css
@@ -36,6 +36,18 @@
   background-position: -261px -5px;
 }
 
+.sprite-as-seen-414125 {
+  width: 639px;
+  height: 151px;
+  background-position: -261px -5px;
+}
+
+.sprite-as-seen-414126 {
+  width: 639px;
+  height: 151px;
+  background-position: -5px -776px;
+}
+
 .sprite-as-seen-revcbd {
   width: 639px;
   height: 151px;
