splite-test-desktop 317682

--- a/static/assets/css/sprites-style.css
+++ b/static/assets/css/sprites-style.css
@@ -295,6 +295,12 @@
   display: block;
 }
 
+.sprite4-variation317682-418324 {
+  height: 240px;
+  width: 960px;
+  background-position: -510px -880px;
+}
+
 .sprite-s2limg1 {
   width: 121px;
   height: 141px;
