split-testing-mobile 317683

--- a/static/assets/css/mb-sprites-style.css
+++ b/static/assets/css/mb-sprites-style.css
@@ -232,6 +232,12 @@
   display: block;
 }
 
+.sprite3-variation317683-418326 {
+  height: 235px;
+  width: 100%;
+  background-position: -10px -1770px;
+}
+
 .sprite3.sprite3-414126 {
   background-position: -4px -1510px;
   height: 216px;
