--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -520,6 +520,11 @@ ul.sec2-list li .btn {
 .mtop1 {
   margin-top: 1em !important;
 }
+
+.address-mtop-1 {
+  margin-top: 0 !important;
+}
+
 .mtop2 {
   margin-top: 2em !important;
 }
