promo home page fixes

--- a/static/assets/css/promo-style.css
+++ b/static/assets/css/promo-style.css
@@ -44,10 +44,10 @@
   right: 90px !important;
 }
 
-.frmElemts input,
+/*.frmElemts input,
 .frmElemts select {
   margin-bottom: 3px;
-}
+}*/
 
 .thank-middle.package {
   display: none;
