--- a/static/assets/css/promo/desktop/checkout.css
+++ b/static/assets/css/promo/desktop/checkout.css
@@ -367,7 +367,8 @@ ul.smrylist li.rgt{width:81px;text-align:right;}
     font-size: 14px;
     color: #2d2d2d;
     text-align: right;
-    margin-right: 9px;
+    margin-right: 11px;
+    margin-left: 8px;
   }
 .frmElemts input, .frmElemts select {
   background: none;
@@ -506,3 +507,8 @@ a.what, a.what:hover {
   50% {-webkit-transform: scale(1);opacity: 1;}
   100% {-webkit-transform: scale(0.95);opacity: 0.7;}
   }
+
+.cvv-field {
+  margin-right: 20px;
+  width: 120px !important;
+}
