promo home page fixes

--- a/static/assets/css/promo/desktop/upsell1.css
+++ b/static/assets/css/promo/desktop/upsell1.css
@@ -224,7 +224,7 @@ ul.up-list li:last-child{border-right:none;}
   font-weight:bold;
   }
 .prd2-prc{ color:#4b052a;}
-.up-btn{display:inline-block;max-width:100%;}
+.up-btn{display:inline-block;max-width:100%;cursor: pointer;}
 .no-p {
   float: left;
   width: 100%;
@@ -232,6 +232,7 @@ ul.up-list li:last-child{border-right:none;}
   font-size: 16px;
   line-height: 20px;
   text-decoration:underline;
+  cursor: pointer;
   }
 .no-p img {
   vertical-align: top;
