mobile flow css fix

--- a/static/assets/css/mb-style.css
+++ b/static/assets/css/mb-style.css
@@ -32,7 +32,7 @@
 
 .mobile-body .pure-control-group.fv-has-success input,
 .mobile-body .pure-control-group.fv-has-success select {
-  border-color: #0fff48;
+  border-color: #651d85;
 }
 
 .mobile-body .pure-control-group.fv-has-error input,
