--- a/static/assets/css/common.css
+++ b/static/assets/css/common.css
@@ -318,7 +318,7 @@
   max-width: 550px;
   border-radius: 4px;
   overflow: hidden;
-  background: #619a5f !important;
+  background: #6b2d92s !important;
   transform: translateY(-80px);
   transition: all 0.5s;
 }
