--- a/static/mobile/css/slick.css
+++ b/static/mobile/css/slick.css
@@ -1,7 +1,6 @@
 /* Slider */
 .slick-slider {
   position: relative;
-  width: 640px;
   display: block;
   box-sizing: border-box;
   -webkit-user-select: none;
@@ -14,6 +13,7 @@
   touch-action: pan-y;
   -webkit-tap-highlight-color: transparent;
 }
+
 .slick-list {
   position: relative;
   display: block;
@@ -21,133 +21,110 @@
   margin: 0;
   padding: 0;
 }
+
 .slick-list:focus {
   outline: none;
 }
+
 .slick-list.dragging {
   cursor: pointer;
   cursor: hand;
 }
-.slick-slider .slick-track,
-.slick-slider .slick-list {
+
+.slick-slider .slick-list,
+.slick-slider .slick-track {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
   -ms-transform: translate3d(0, 0, 0);
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
+
 .slick-track {
   position: relative;
   top: 0;
   left: 0;
   display: block;
 }
-.slick-track:before,
-.slick-track:after {
+
+.slick-track:after,
+.slick-track:before {
   display: table;
   content: "";
 }
+
 .slick-track:after {
   clear: both;
 }
+
 .slick-loading .slick-track {
   visibility: hidden;
 }
+
 .slick-slide {
   display: none;
   float: left;
-  height: 100%;
+
   min-height: 1px;
 }
+
 [dir="rtl"] .slick-slide {
   float: right;
 }
+
 .slick-slide img {
-  display: block;
 }
+
 .slick-slide.slick-loading img {
   display: none;
 }
+
 .slick-slide.dragging img {
   pointer-events: none;
 }
+
 .slick-initialized .slick-slide {
   display: block;
 }
+
 .slick-loading .slick-slide {
   visibility: hidden;
 }
+
 .slick-vertical .slick-slide {
   display: block;
   height: auto;
   border: 1px solid transparent;
 }
+
 .slick-arrow.slick-hidden {
   display: none;
 }
-
-/* Arrows */
-.slick-prev,
+/* Icons */
 .slick-next,
-.slider2 .slick-prev,
-.slider2 .slick-next {
+.slick-prev {
   position: absolute;
-  top: 48%;
+  top: 108%;
   display: block;
-  width: 60px;
-  height: 90px;
+  width: 73px;
+  height: 73px;
   padding: 0;
-  margin-top: -20px;
   outline: none;
   border: none;
   z-index: 9;
   cursor: pointer;
 }
+
 .slick-prev {
-  left: 10px;
-  background: url(../images/prev.png) no-repeat left center;
-  background-size: 100%;
+  left: 238px;
+  background: url("/static/promo/mobile/images/images/prev.png") no-repeat left
+    center;
 }
+
 .slick-next {
-  right: 10px;
-  background: url(../images/next.png) no-repeat left center;
-  background-size: 100%;
+  right: 238px;
+  background: url("/static/promo/mobile/images/images/next.png") no-repeat left
+    center;
 }
-/*--------------------------------*/
-.slick-dots {
-  position: absolute;
-  bottom: -69px;
-  display: block;
-  width: 100%;
-  padding: 0;
-  list-style: none;
-  text-align: center;
-  border-radius: 50px;
-}
-.slick-dots li {
-  position: relative;
-  display: inline-block;
-  height: 38px;
-  margin: 0 5px;
-  padding: 0;
-  cursor: pointer;
-  list-style: none;
-  border-radius: 50px;
-}
-.slider .slick-dots li button {
-  font-size: 0;
-  line-height: 0;
-  display: block;
-  width: 25px;
-  height: 25px;
-  padding: 5px;
-  cursor: pointer;
-  color: transparent;
-  border: 0;
-  outline: none;
-  background: #0f7545;
-  border-radius: 50px;
-}
-.slider .slick-dots li.slick-active button {
-  background: #4d886c;
-}
+
+/* Arrows */
