move checkbox/tickmark to left on mobile

--- a/static/assets/css/mb-style.css
+++ b/static/assets/css/mb-style.css
@@ -22,6 +22,11 @@
   right: 10px;
 }
 
+.select-filed {
+  right: unset !important;
+  left: 10px !important;
+}
+
 .hideIcon .fv-control-feedback {
   display: none !important;
 }
