update css and date

--- a/static/assets/css/promo/mobile/mobile-new.css
+++ b/static/assets/css/promo/mobile/mobile-new.css
@@ -648,6 +648,7 @@ ul.s6-uls li:last-child {
 .ftr-txt a:hover {
   color: #000;
   text-decoration: none;
+  text-transform: uppercase;
 }
 /*--------------------PLUSE--------------------*/
 .pulse {
