--- a/static/assets/css/mb-checkout-new.css
+++ b/static/assets/css/mb-checkout-new.css
@@ -3,20 +3,27 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   font-smoothing: antialiased;
 }
-div, ul, li, p, img, form, input, textarea {
+div,
+ul,
+li,
+p,
+img,
+form,
+input,
+textarea {
   margin: 0;
   padding: 0;
 }
 a {
 }
 a:hover {
-outline:
+  outline: ;
 }
 img {
   border: none;
@@ -40,7 +47,7 @@ li {
 }
 /*------------------------
   SHIPPING-PAGES
---------------------------*/  
+--------------------------*/
 div#ck-sec1 {
   height: 80px;
   width: 100%;
@@ -67,24 +74,25 @@ div#ck-sec2 {
   display: block;
 }
 .chk-toptxt1 {
-  background:#651d85;
+  background: #651d85;
   font-weight: bold;
   float: left;
   width: 100%;
   text-align: center;
   font-size: 30px;
   line-height: 42px;
-  border-top:1px solid #e5e5e5;
+  border-top: 1px solid #e5e5e5;
   color: #fff;
   text-transform: uppercase;
-  padding:10px 0 8px;
+  padding: 10px 0 8px;
 }
 .card {
   margin: 7% auto 0 auto;
   padding: 0;
   display: block;
 }
-.frm-bg, .frm-bg2 {
+.frm-bg,
+.frm-bg2 {
   width: 100%;
   margin: 0 auto;
 }
@@ -92,7 +100,9 @@ div#ck-sec2 {
   margin: 0 auto;
   width: 80%;
 }
-.frmFlds, .frmFlds1, .frmshort {
+.frmFlds,
+.frmFlds1,
+.frmshort {
   width: 90%;
   margin: 3px auto;
   display: block;
@@ -103,7 +113,10 @@ div#ck-sec2 {
   width: 49%;
   box-sizing: border-box;
 }
-.frmFlds input, .frmFlds select, .frmFlds1 input, .frmFlds1 select {
+.frmFlds input,
+.frmFlds select,
+.frmFlds1 input,
+.frmFlds1 select {
   background: #ffffff;
   border: 1px solid #a8a8a8;
   font-size: 30px;
@@ -124,7 +137,8 @@ div#ck-sec2 {
   width: 100%;
   height: 59px;
 }
-.frmFlds label, .frmFlds1 label {
+.frmFlds label,
+.frmFlds1 label {
   font-size: 25px;
   line-height: 42px;
   text-align: left;
@@ -135,7 +149,8 @@ div#ck-sec2 {
   font-family: Arial, Helvetica, sans-serif;
   margin-top: 10px;
 }
-.frmFlds1 input, .frmFlds1 select {
+.frmFlds1 input,
+.frmFlds1 select {
   margin: 0 0 0 0;
   box-sizing: border-box;
 }
@@ -154,16 +169,16 @@ div#ck-sec2 {
   float: right;
 }
 .btn-box {
-    height: 228px;
-    padding: 1% 0 1% 0;
-    background: #651d85;
-    text-align: center;
-    margin: 20px auto 0 auto;
-    display: block;
-    clear: both;
+  height: 228px;
+  padding: 1% 0 1% 0;
+  background: #651d85;
+  text-align: center;
+  margin: 20px auto 0 auto;
+  display: block;
+  clear: both;
 }
 .secure-img {
-  margin-top:6px; 
+  margin-top: 6px;
 }
 .security {
   margin: 15px auto;
@@ -179,17 +194,18 @@ div#ck-sec2 {
   padding: 0 0 0 0;
 }
 .chk-toptxt1-bdr {
-  background:none;
-  border-top:1px solid #e5e5e5;
+  background: none;
+  border-top: 1px solid #e5e5e5;
   color: #0d0d0d;
-  padding:15px 0 0;
+  padding: 15px 0 0;
 }
-/* ================== shipping page end==================*/ 
+/* ================== shipping page end==================*/
 /* ================== payment page start==================*/
 .con-txtbox {
   border-top: 1px solid #d6d6d6;
 }
-.con-txt1, .con-txt2 {
+.con-txt1,
+.con-txt2 {
   font-weight: 600;
   color: #5a5a5a;
   font-size: 18px;
@@ -212,7 +228,8 @@ div#ck-sec2 {
   margin: 0;
   padding: 10px 20px 10px 20px;
 }
-.con-txt1 span, .con-txt2 span {
+.con-txt1 span,
+.con-txt2 span {
   color: #57bde8;
 }
 .con-txt3 span.rdtxt {
@@ -240,7 +257,8 @@ div#ck-sec2 {
   width: 100%;
   padding: 3px 0 3px;
 }
-.lftbox, .rgtbox {
+.lftbox,
+.rgtbox {
   float: left;
   display: inline-block;
 }
@@ -312,7 +330,8 @@ ul.rgtlist li.two {
   width: 36%;
   padding-right: 5%;
 }
-ul.rgtlist li.one span, ul.rgtlist li.two span {
+ul.rgtlist li.one span,
+ul.rgtlist li.two span {
   font-weight: 600;
   line-height: 44px;
   text-transform: uppercase;
@@ -324,7 +343,7 @@ ul.rgtlist li.one span, ul.rgtlist li.two span {
   display: block;
   padding: 0 0;
 }
-input[type=checkbox] {
+input[type="checkbox"] {
   zoom: 1.7;
   margin: 0% 1% 0 0;
   vertical-align: middle;
@@ -339,7 +358,8 @@ input[type=checkbox] {
   margin: 13px auto;
   display: block;
 }
-.chkbx, .membership {
+.chkbx,
+.membership {
   width: 100%;
   display: inline-block;
   float: left;
@@ -365,21 +385,24 @@ input[type=checkbox] {
   margin: 0;
   padding: 20px 46px 10px 40px;
 }
-.term a, .term a:hover {
+.term a,
+.term a:hover {
   text-decoration: underline;
   color: #747474;
 }
 .smrhding {
   height: 52px;
   border-bottom: 1px solid #a8a5a5;
-  background: url(/static/promo/mobile/images/images/smryarrow.png) 555px center no-repeat;
+  background: url(/static/promo/mobile/images/images/smryarrow.png) 555px center
+    no-repeat;
   position: relative;
   padding: 7px 0 15px 25px;
   cursor: pointer;
   font-size: 23px;
 }
 .rotate {
-  background: url(/static/promo/mobile/images/images/smryarrow2.png) 565px center no-repeat;
+  background: url(/static/promo/mobile/images/images/smryarrow2.png) 565px
+    center no-repeat;
 }
 .smrhding p {
   font-size: 26px;
@@ -389,14 +412,14 @@ input[type=checkbox] {
   padding: 0 46px;
   cursor: pointer;
 }
-/* ==================select page end==================*/  
+/* ==================select page end==================*/
 .slct-box1 {
-    width: 98%;
-    margin: 8px auto 20px;
-    border: 1px solid #651d85;
-    border-radius: 10px;
-    text-align: center;
-    background: #fff;
+  width: 98%;
+  margin: 8px auto 20px;
+  border: 1px solid #651d85;
+  border-radius: 10px;
+  text-align: center;
+  background: #fff;
 }
 .slct-mid {
   text-align: center;
@@ -409,13 +432,13 @@ input[type=checkbox] {
   font-size: 32px;
   text-transform: uppercase;
   line-height: 35px;
-  font-weight:bold;
+  font-weight: bold;
 }
 .seclt-txt1 span {
   color: #fff000;
 }
 .pack1-prod {
-  padding:10px 0 0px;
+  padding: 10px 0 0px;
 }
 .seclt-txt2 {
   font-size: 30px;
@@ -433,77 +456,78 @@ input[type=checkbox] {
   border-radius: 0 0 8px 8px;
 }
 .seclt-reg-txt {
-    font-size: 20px;
-    line-height: 24px;
-    color: #fff;
-    text-align: center;
-    margin: 0 auto;
+  font-size: 20px;
+  line-height: 24px;
+  color: #fff;
+  text-align: center;
+  margin: 0 auto;
 }
 .seclt-reg-txt span {
-  position:relative;
+  position: relative;
 }
 .seclt-reg-txt span img {
-  position:absolute;
-  top:7px;
-  left:0px;
+  position: absolute;
+  top: 7px;
+  left: 0px;
 }
 .p5-pkgchk {
-  padding:10px 0 5px;
+  padding: 10px 0 5px;
 }
 .prc-details-txt1 {
   font-size: 55px;
   display: inline-block;
-  font-weight:bold;
+  font-weight: bold;
   color: #fff;
 }
 .prc-details-txt2 {
   font-size: 23px;
   display: inline-block;
   color: #fff;
-  font-weight:normal;
+  font-weight: normal;
 }
 .s-mid-txt2 {
   font-size: 22px;
   font-weight: 600;
   line-height: 30px;
   padding: 0 0 0 0;
-  font-family: 'Montserrat Semi';
+  font-family: "Montserrat Semi";
   color: #f26d0d;
-  text-transform:uppercase;
+  text-transform: uppercase;
 }
 .s-mid-txt3 {
   font-size: 16px;
   line-height: 25px;
   padding: 6px 0 15px 0;
   color: #fff;
-  text-transform:uppercase;
+  text-transform: uppercase;
 }
 .slct-box1-mar-btm {
-  margin:8px auto 0px;
+  margin: 8px auto 0px;
 }
 .s-mid-txt3-last {
-  padding-bottom:30px;
+  padding-bottom: 30px;
 }
 /*----------------
    FOOTER
-----------------*/  
+----------------*/
 .legal {
-    margin-top: -4px;
-    color: white;
-    text-align: center;
-    padding: 0 0px 0 0;
-    height: 120px;
+  margin-top: -4px;
+  color: white;
+  text-align: center;
+  padding: 0 0px 0 0;
+  height: 120px;
 }
 .ftr-txt {
   font-size: 14px;
   line-height: 18px;
   text-align: center;
   color: #000;
-  font-weight:300;
-  margin:0 0 0 0;
+  font-weight: 300;
+  margin: 0 0 0 0;
   padding: 35px 10px 0 10px;
 }
-.ftr-txt a, .ftr-txt a:hover {
+.ftr-txt a,
+.ftr-txt a:hover {
   color: #000;
   text-decoration: none;
 }
@@ -516,27 +540,27 @@ input[type=checkbox] {
   animation-iteration-count: infinite;
   -webkit-animation-iteration-count: infinite;
 }
- @keyframes pulse {
-0% {
-transform: scale(0.9);
+@keyframes pulse {
+  0% {
+    transform: scale(0.9);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.9);
+  }
 }
-50% {
-transform: scale(1);
-}
-100% {
-transform: scale(0.9);
-}
-}
- @-webkit-keyframes pulse {
-0% {
--webkit-transform: scale(0.95);
-}
-50% {
--webkit-transform: scale(1);
-}
-100% {
--webkit-transform: scale(0.95);
-}
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-transform: scale(0.95);
+  }
+  50% {
+    -webkit-transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(0.95);
+  }
 }
 
 .display-none {
@@ -609,7 +633,24 @@ transform: scale(0.9);
   right: 50px;
 }
 
-.fv-has-error, .fv-has-error label {
+.checkout .fa-check {
+  color: #651d85;
+}
+
+.checkout .fv-has-success input {
+  border: 1px solid #651d85;
+}
+
+.checkout .fv-has-success label {
+  color: #651d85 !important;
+}
+
+.checkout .fv-has-success select {
+  border: 1px solid #651d85;
+}
+
+.fv-has-error,
+.fv-has-error label {
   color: #da6e6d !important;
 }
 
