--- a/static/desktop/css/upsell-new.css
+++ b/static/desktop/css/upsell-new.css
@@ -431,6 +431,7 @@ CSS FOR THANKYOU PAGE
 .thnk-recpt-box {
   float: left;
   width: 100%;
+  background: #f1f1f1;
   /* background: #f1f1f1 url("/static/promo/desktop/img/thnk-bg.png") repeat-x left top; */
   padding: 30px 35px;
   margin: 30px 0 0;
