Fix the error using `pointer-events: none;`

--- a/static/assets/css/common.css
+++ b/static/assets/css/common.css
@@ -473,3 +473,7 @@ input::-webkit-contacts-auto-fill-button {
 .modal-dialog {
   color: black !important;
 }
+
+.fv-control-feedback {
+  pointer-events: none;
+}
