green validation added for mobile and desktop. previous color: #0fff48 (desktop), purple(mobile) current color : #1cb841 (mobile, desktop)

--- a/static/assets/css/mb-style.css
+++ b/static/assets/css/mb-style.css
@@ -36,7 +36,8 @@
 
 .mobile-body .pure-control-group.fv-has-success input,
 .mobile-body .pure-control-group.fv-has-success select {
-  border-color: #651d85;
+  /*border-color: #651d85;*/
+  border-color: #1cb841;
 }
 
 .mobile-body .pure-control-group.fv-has-error input,
