make right tickmark bigger on checkout page for mobile

--- a/static/assets/css/mb-checkout-new.css
+++ b/static/assets/css/mb-checkout-new.css
@@ -631,6 +631,7 @@ input[type="checkbox"] {
 .mobile-payment-wrapper .fv-control-feedback {
   top: 52px;
   right: 50px;
+  font-size: 25px;
 }
 
 .mobile-cvv {
